---------------------------------------------------------------------------------------------------
Version: 1.4.1
Date: 18/12/25
---------------------------------------------------------------------------------------------------
Version: 1.4.0
Date: 18/12/25
  Minor Features:
    - Notifications about extra trades (bronze star effect), interplanetary trades (silver star effect), and trade recovery (gold star effect) now also show the trade in the text.
  Balancing:
    - Trades that give items which are not yet produceable with a researched recipe now have a penalty to trade productivity. Can be tweaked or disabled in the mod settings.
    - Increased default mod settings for productivity rank-up requirements:
        Bronze -> Silver: 35%
        Silver -> Gold: 85%
        Gold -> Red: 130%
  Changes:
    - Changed that the bronze star "extra trade" effect to apply on ALL hex cores, not just ones that never had an extra trade given to it before.
    - Changed that the belt capacity tech from this mod doesn't consume promethium science packs.
    - Dungeon hexes with extra trades from the bronze effect no longer ping them in chat if they are in uncharted areas of the map.
    - Newly added trades to hex cores with existing items in their inventories will no longer auto-update inventory slot filters based on the trade contents.
    - The notifications in chat about various upgrades taking effect now have more of an arcade style to them, as well as better consistency in formatting.
    - Improved the productivity info when the productivity is negative.
    - Removed parentheses around icons and labels in the productivity info for trades.
  Gui:
    - Re-spaced the lines between trades in the hex core GUI.
    - Lines only show between trades once the "Trade Configuration" feature is unlocked.
  Bugfixes:
    - Fixed that spidertrons and other vehicles would disappear when a hex core spawns underneath them.